[project]
name = "steel-bird"
version = "0.1.0"
description = ""
authors = [
    {name = "oskalis",email = "oskalis@yandex.ru"}
]
requires-python = ">=3.13, <3.15"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "phik (>=0.12.5,<0.13.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "optuna-integration (>=4.8.0,<5.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "skorch (>=1.3.1,<2.0.0)",
    "shap (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
